--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -15,6 +15,7 @@
         <module>service-fraud-detector</module>
         <module>service-email</module>
         <module>service-user</module>
+        <module>service-http-ecommerce</module>
     </modules>
 
     <properties>
