--- a/ecommerce/service-http-ecommerce/pom.xml
+++ b/ecommerce/service-http-ecommerce/pom.xml
@@ -16,4 +16,18 @@
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlet -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>9.4.23.v20191118</version>
+        </dependency>
+        <dependency>
+            <groupId>br.com.oluizleme</groupId>
+            <artifactId>commons-kafka</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
