Implementacao do modulo de processamento de relatorios

--- a/ecommerce/service-reading-report/pom.xml
+++ b/ecommerce/service-reading-report/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-reading-report</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>br.com.oluizleme</groupId>
+            <artifactId>commons-kafka</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
