Extraido o common database e implementado a idempotencia e fast delegate com o FraudDetectorService

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 *ecommerce/.idea/
 *ecommerce/*/target
 *ecommerce/target/users_database.db
+*ecommerce/target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
