--- a/ecommerce/service-user/pom.xml
+++ b/ecommerce/service-user/pom.xml
@@ -17,15 +17,15 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.36.0.2</version>
-        </dependency>
         <dependency>
             <groupId>br.com.oluizleme</groupId>
             <artifactId>commons-kafka</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>br.com.oluizleme</groupId>
+            <artifactId>common-database</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
