--- a/ecommerce/service-http-ecommerce/pom.xml
+++ b/ecommerce/service-http-ecommerce/pom.xml
@@ -29,5 +29,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>br.com.oluizleme</groupId>
+            <artifactId>common-database</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
